🐛Fix: add box-sizing border-box

--- a/absolute/style.css
+++ b/absolute/style.css
@@ -1,3 +1,7 @@
+* {
+  box-sizing: border-box;
+}
+
 body {
   display: flex;
   justify-content: center;
@@ -38,8 +42,8 @@ main {
   position: absolute;
   top: 4px;
   right: 2px;
-  width: 6px;
-  height: 6px;
+  width: 8px;
+  height: 8px;
   border-radius: 50%;
   border: 2px solid #fff;
   background-color: #23a55a;
